Add CMake projects for libraries Right now this has to be improved to generate EXE and DLL outputs. Currently this is required to add at least BWAPI lib files.

--- a/.gitignore
+++ b/.gitignore
@@ -24,5 +24,6 @@ UAlbertaBot/bin/UAlbertaBot.iobj
 /SparCraft/bin/test
 *.bat
 *.lastcodeanalysissucceeded
+compile/
 /SparCraft/VisualStudio/x64
 /UAlbertaBot/VisualStudio/x64
