Limit usage of clobal variables and global current frame counter

--- a/UAlbertaBot/VisualStudio/UAlbertaBot.vcxproj
+++ b/UAlbertaBot/VisualStudio/UAlbertaBot.vcxproj
@@ -99,6 +99,7 @@
     <ClInclude Include="..\Source\OpponentView.h" />
     <ClInclude Include="..\Source\PlayerLocationProvider.h" />
     <ClInclude Include="..\Source\ScreenCanvas.h" />
+    <ClInclude Include="..\Source\Strategy.h" />
     <ClInclude Include="..\Source\UAlbertaBot_Arena.h" />
     <ClInclude Include="..\Source\UAlbertaBot_Tournament.h" />
     <ClInclude Include="..\Source\UnitHandler.h" />
