--- a/UAlbertaBot/VisualStudio/UAlbertaBot.vcxproj.filters
+++ b/UAlbertaBot/VisualStudio/UAlbertaBot.vcxproj.filters
@@ -143,6 +143,30 @@
     <ClCompile Include="..\Source\DefaultPlayerLocationProvider.cpp">
       <Filter>map</Filter>
     </ClCompile>
+    <ClCompile Include="..\Source\BaseLocationManagerDebug.cpp">
+      <Filter>debug</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Source\WorkerManagerDebug.cpp">
+      <Filter>debug</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Source\MapToolsDebug.cpp">
+      <Filter>debug</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Source\UnitInfoManagerDebug.cpp">
+      <Filter>debug</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Source\GameCommanderDebug.cpp">
+      <Filter>debug</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Source\CombatCommanderDebug.cpp">
+      <Filter>debug</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Source\ScoutManagerDebug.cpp">
+      <Filter>debug</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Source\ProductionManagerDebug.cpp">
+      <Filter>debug</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="common">
@@ -165,6 +189,9 @@
     </Filter>
     <Filter Include="arena">
       <UniqueIdentifier>{cbfed59a-0e98-454a-95c8-66cec39afce4}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="debug">
+      <UniqueIdentifier>{2c31dc4d-e116-48d4-ba2c-5956cbcc5d1a}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -330,6 +357,36 @@
     </ClInclude>
     <ClInclude Include="..\Source\Strategy.h">
       <Filter>global</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Source\Distance.h">
+      <Filter>util</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Source\BaseLocationManagerDebug.h">
+      <Filter>debug</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Source\Rect.h">
+      <Filter>util</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Source\WorkerManagerDebug.h">
+      <Filter>debug</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Source\MapToolsDebug.h">
+      <Filter>debug</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Source\UnitInfoManagerDebug.h">
+      <Filter>debug</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Source\GameCommanderDebug.h">
+      <Filter>debug</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Source\CombatCommanderDebug.h">
+      <Filter>debug</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Source\ScoutManagerDebug.h">
+      <Filter>debug</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Source\ProductionManagerDebug.h">
+      <Filter>debug</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
