Ignore bat files

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,4 @@ UAlbertaBot/bin/UAlbertaBot.iobj
 /UAlbertaBot/VisualStudio/Debug_SSCAIT
 /UAlbertaBot/VisualStudio/Release_SSCAIT
 /SparCraft/bin/test
+*.bat
