--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@ UAlbertaBot/bin/UAlbertaBot.iobj
 /UAlbertaBot/VisualStudio/Release_SSCAIT
 /SparCraft/bin/test
 *.bat
+*.lastcodeanalysissucceeded
