--- a/UAlbertaBot/VisualStudio/UAlbertaBot_exe.vcxproj
+++ b/UAlbertaBot/VisualStudio/UAlbertaBot_exe.vcxproj
@@ -175,6 +175,7 @@
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
       <DisableSpecificWarnings>4996</DisableSpecificWarnings>
       <AdditionalOptions>/await %(AdditionalOptions)</AdditionalOptions>
+      <LanguageStandard>stdcpp14</LanguageStandard>
     </ClCompile>
     <ProjectReference>
       <LinkLibraryDependencies>true</LinkLibraryDependencies>
