Move shared bot creation logic to main bot project

--- a/UAlbertaBot/VisualStudio/UAlbertaBot.vcxproj
+++ b/UAlbertaBot/VisualStudio/UAlbertaBot.vcxproj
@@ -27,7 +27,9 @@
     <ClCompile Include="..\Source\BaseLocationManager.cpp" />
     <ClCompile Include="..\Source\BaseLocationManagerDebug.cpp" />
     <ClCompile Include="..\Source\BOSSManager.cpp" />
+    <ClCompile Include="..\Source\BotFactory.cpp" />
     <ClCompile Include="..\Source\BotModule.cpp" />
+    <ClCompile Include="..\Source\BotPlayer.cpp" />
     <ClCompile Include="..\source\BuildingManager.cpp" />
     <ClCompile Include="..\source\BuildingPlacer.cpp" />
     <ClCompile Include="..\source\BuildOrder.cpp" />
@@ -89,7 +91,9 @@
     <ClInclude Include="..\Source\BaseLocationManager.h" />
     <ClInclude Include="..\Source\BaseLocationManagerDebug.h" />
     <ClInclude Include="..\Source\BOSSManager.h" />
+    <ClInclude Include="..\Source\BotFactory.h" />
     <ClInclude Include="..\Source\BotModule.h" />
+    <ClInclude Include="..\Source\BotPlayer.h" />
     <ClInclude Include="..\source\BuildingManager.h" />
     <ClInclude Include="..\source\BuildingPlacer.h" />
     <ClInclude Include="..\source\BuildOrder.h" />
