--- a/UAlbertaBot/VisualStudio/UAlbertaBot.vcxproj.filters
+++ b/UAlbertaBot/VisualStudio/UAlbertaBot.vcxproj.filters
@@ -175,6 +175,9 @@
     <ClCompile Include="..\Source\debug\WorkerManagerDebug.cpp">
       <Filter>debug</Filter>
     </ClCompile>
+    <ClCompile Include="..\Source\debug\GameDebug.cpp">
+      <Filter>debug</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="common">
@@ -408,6 +411,12 @@
       <Filter>debug</Filter>
     </ClInclude>
     <ClInclude Include="..\Source\debug\WorkerManagerDebug.h">
+      <Filter>debug</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Source\debug\DebugInfoProvider.h">
+      <Filter>debug</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Source\debug\GameDebug.h">
       <Filter>debug</Filter>
     </ClInclude>
   </ItemGroup>
