--- a/UAlbertaBot/VisualStudio/AkBot.Tests.vcxproj
+++ b/UAlbertaBot/VisualStudio/AkBot.Tests.vcxproj
@@ -25,6 +25,7 @@
     <RootNamespace>AkBotTests</RootNamespace>
     <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
     <ProjectSubType>NativeUnitTestProject</ProjectSubType>
+    <ProjectName>AKBot.Tests</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
